--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,3 @@
-#  Local .terraform directories
-**/.terraform/*
-
-# .tfstate files
-*.tfstate
-*.tfstate.*
-
-# IDE files
-.idea
-*.iml
-
-# Build harness files
-.build-harness
-build-harness
+.terraform
+*tfstate*
+.plan*
